--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "framer-motion": "^5.4.5",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
