--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "file-loader": "^6.2.0",
     "framer-motion": "^5.4.5",
     "next": "^12.0.7",
     "react": "^17.0.2",
